# ragd

./: .dockerignore  .env.dist  AGENTS.md  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yml  main.py  mcp.md  pyproject.toml  restish.md  run.sh
.github/workflows/: ci.yml  docker-image.yml
conformance/: cases.json  golden.json
docs/: canon-spec.md  core-spec.md  design-init.md
ragd/: __init__.py  auth.py  canon.py  chunking.py  config.py  db.py  embeddings.py  main.py  schemas.py  store.py
ragd/core/: store.py
ragd/server/: __init__.py  app.py
scripts/: conformance.py  init_db.sql  pw-encode.sh  ragd_client.py  reset_db.sh  reset_db.sql
